# OpenGL-test

./: CMakeLists.txt  Readme.txt  glad.c  main.cpp
application/: Application.cpp  Application.h  CMakeLists.txt
application/camera/: GameCameraControl.cpp  GameCameraControl.h  camera.cpp  camera.h  cameraControl.cpp  cameraControl.h  orthographicCamera.cpp  orthographicCamera.h  perspectiveCamera.cpp  perspectiveCamera.h  trackBallCameraControl.cpp  trackBallCameraControl.h
application/imGui/: imGui_user.cpp  imGui_user.h
assets/shaders/: fragment.glsl  vertex.glsl
glframework/: CMakeLists.txt  core.h  shader.cpp  shader.h  texture.cpp  texture.h
wrapper/: CMakeLists.txt  checkError.cpp  checkError.h
